tests/baselines/reference/importAttributes3(module=esnext).errors.txt
1.ts(1,27): error TS2857: Import attributes cannot be used with type-only imports or exports.
1.ts(2,30): error TS2857: Import attributes cannot be used with type-only imports or exports.
2.ts(1,31): error TS2857: Import attributes cannot be used with type-only imports or exports.
2.ts(2,33): error TS2857: Import attributes cannot be used with type-only imports or exports.


==== 0.ts (0 errors) ====
    export interface I { }
    
==== 1.ts (2 errors) ====
    export type {} from './0' with { type: "json" }
                              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2857: Import attributes cannot be used with type-only imports or exports.
    export type { I } from './0' with { type: "json" }
                                 ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2857: Import attributes cannot be used with type-only imports or exports.
    
==== 2.ts (2 errors) ====
    import type { I } from './0'  with { type: "json" }
                                  ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2857: Import attributes cannot be used with type-only imports or exports.
    import type * as foo from './0' with { type: "json" }
                                    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2857: Import attributes cannot be used with type-only imports or exports.
    